--- a/docroot/sites/all/themes/escrow/sass/partials/components/listing/_micro_teaser.scss
+++ b/docroot/sites/all/themes/escrow/sass/partials/components/listing/_micro_teaser.scss
@@ -29,9 +29,7 @@
       float: left;
       margin-right: 2%;
       margin-left: 0;
-      &:nth-child(odd) {
-        margin-right: inherit;
-      }
+
       &:nth-child(3n) {
         margin-right: 0;
       }
